<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendlyLiveTranslator_5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot">Forgot Password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="ready">Ready To Chat</string>
    <string name="userName">User Name</string>
    <string name="enter">Enter</string>
    <string name="say">Say</string>
    <string name="summon">Summon</string>
    <string name="user_summon">Enter user to summon</string>
    <string name="send">Send</string>
    <string name="write">Say or Write Something</string>
    <string name="done_signup"><u>Your Sign Up Details</u></string>
    <string name="setting"><u>Settings</u></string>
    <string name="choose_lang">Choose Language</string>
	  <string-array name="lang">
	    <item>Sending in:</item>
	    <item>ENGLISH</item>
	    <item>FRENCH</item>
	    <item>GERMAN</item>
	    <item>ITALIAN</item>    
	  </string-array>
	<string name="choose_lang_2">Choose Language</string>
	  <string-array name="lang_2">
	    <item>Receiving in:</item>
	    <item>ENGLISH</item>
	    <item>FRENCH</item>
	    <item>GERMAN</item>
	    <item>ITALIAN</item>    
	  </string-array>
    <string
        name="feedbackname">Your Name</string>
    <string
        name="feedbackbody">Feedback Details...</string>
    <string
        name="feedbackresponse">Would you like an email response?</string>
    <string
        name="feedbackbutton">Send Feedback</string>
    <string
        name="feedbacktype">Enter feedback type...</string>    
    <string
        name="feedbacktype1">Praise</string>
    <string
        name="feedbacktype2">Gripe</string>
    <string
        name="feedbacktype3">Suggestion</string>
    <string
        name="feedbacktype4">Bug</string>
    <string
        name="feedbackmessagebody_responseyes">Requires a response</string>
    <string
        name="feedbackmessagebody_responseno">Does not require a response</string>
    <string
        name="feedbacktitle">Enter feedback details to send to the developer: </string>
</resources>
