<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="il.ac.shenkar.friendlylivetranslator_5.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:hint="@string/enter_email" />

    <Button
        android:id="@+id/done"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/pword"
        android:layout_alignStart="@+id/pword"
        android:layout_below="@+id/pword"
        android:layout_marginTop="37dp"
        android:background="@color/BrightBlue"
        android:text="@string/login" />

    <Button
        android:id="@+id/ButtonBack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/passres"
        android:layout_alignTop="@+id/done"
        android:background="@color/BrightBlue"
        android:text="@string/signup" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pword"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:hint="@string/enter_password" />

    <Button
        android:id="@+id/passres"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@+id/email"
        android:layout_alignLeft="@+id/done"
        android:layout_below="@+id/ButtonBack"
        android:layout_marginTop="20dp"
        android:background="@color/BrightBlue"
        android:text="@string/forgot" />

    <TextView
        android:id="@+id/loginErrorMsg"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignLeft="@+id/loginErrorMsg"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

</RelativeLayout>
