<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/zce" />

    <TextView
        android:id="@+id/textwelcome"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/BrightBlue"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:text="@string/ready" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/enter"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_below="@+id/resultTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@color/BrightBlue"
        android:text="@string/enter" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/settings"
        android:layout_marginTop="14dp"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <EditText
            android:id="@+id/editSummon"
            android:layout_width="0dip"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:hint="@string/user_summon"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSummon"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="15dp"
            android:background="@color/BrightBlue"
            android:text="@string/summon" />
    </LinearLayout>

</RelativeLayout>