<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/onlineUserSpinner"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/BrightBlue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/selectLanguage1"
            android:layout_width="129dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:entries="@array/lang"
            android:prompt="@string/choose_lang" />

        <Spinner
            android:id="@+id/selectLanguage2"
            android:layout_width="129dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/selectLanguage1"
            android:entries="@array/lang_2"
            android:prompt="@string/choose_lang" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/outputScrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.76" >

	    <TextView 
	        android:id="@+id/outputTextView"
	        android:textSize="18sp"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp" 
	        android:paddingRight="5dp" 
	        android:paddingTop="5dp" />
	</ScrollView>

	<LinearLayout 
	    android:id="@+id/linearLayout1"
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:paddingLeft="5dp" 
	    android:paddingRight="5dp"
	    android:paddingBottom="5dp"
	    android:baselineAligned="true">

	    <EditText
	        android:id="@+id/textChat"
	        android:layout_width="0dip"
	        android:layout_height="45dp"
	        android:layout_marginLeft="2dp"
	        android:layout_weight="1"
	        android:hint="@string/write"
	        android:inputType="text" >
	    </EditText>

	    <Button
	        android:id="@+id/btnSend"
	        style="?android:attr/borderlessButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_marginRight="2dp"
	        android:background="@color/BrightBlue"
	        android:text="@string/send" >

	    </Button>
    </LinearLayout>
    
</LinearLayout>